管理画面向け手動通知一括作成APIを実装する
